--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
       <h1>Stream Your Favorite Anime Anytime, Anywhere</h1>
       <p>Join HikariFlix and enjoy thousands of anime shows and movies on demand.</p>
       <div class="cta-buttons">
-        <a href="#" class="cta-btn android-btn">Download for Android</a>
-        <a href="#" class="cta-btn ios-btn">Download for iOS</a>
+        <a href="#" class="cta-btn android-btn">Download for Free</a>
       </div>
     </div>
   </header>
@@ -33,7 +32,7 @@
       </div>
       <div class="feature">
         <h3>Multi-Device Support</h3>
-        <p>Watch on smartphones, tablets, and desktops (coming soon).</p>
+        <p>Watch on Android smartphones, tablets, and desktops (coming soon).</p>
       </div>
       <div class="feature">
         <h3>High-Quality Streaming</h3>
@@ -69,8 +68,7 @@
       <h3>Join HikariFlix Today!</h3>
       <p>Start streaming your favorite anime now.</p>
       <div class="cta-buttons">
-        <a href="#" class="cta-btn android-btn">Download for Android</a>
-        <a href="#" class="cta-btn ios-btn">Download for iOS</a>
+        <a href="#" class="cta-btn android-btn">Download for Free</a>
       </div>
       <ul class="footer-links">
         <li><a href="https://github.com/geekobueno/HikariFlix">Learn more about the project</a></li>
