--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1>Stream Your Favorite Anime Anytime, Anywhere</h1>
       <p>Join HikariFlix and enjoy thousands of anime shows and movies on demand.</p>
       <div class="cta-buttons">
-        <a href="#" class="cta-btn android-btn">Download for Free</a>
+        <a href="https://github.com/geekobueno/HikariFlix/releases/download/v1.0.0-beta/hikariflix.apk" class="cta-btn android-btn">Download for Free</a>
       </div>
     </div>
   </header>
@@ -68,7 +68,7 @@
       <h3>Join HikariFlix Today!</h3>
       <p>Start streaming your favorite anime now.</p>
       <div class="cta-buttons">
-        <a href="#" class="cta-btn android-btn">Download for Free</a>
+        <a href="https://github.com/geekobueno/HikariFlix/releases/download/v1.0.0-beta/hikariflix.apk" class="cta-btn android-btn">Download for Free</a>
       </div>
       <ul class="footer-links">
         <li><a href="https://github.com/geekobueno/HikariFlix">Learn more about the project</a></li>
